# personal_knowledge_state

./: .gitignore  README.md  pyproject.toml  start.sh
docs/adapter/: mcp_design.md
docs/adapter/web/: api.md  claim_creation.md  overview.md  pages.md
docs/core-design/: pks_capsule_design.md  pks_claim_design.md  pks_kernel_design.md  pks_maintenance_design.md  pks_product_plan_v2.md  pks_projection_design.md
docs/history/: Harness不是目的，知识才是护城河 —— 一个AI工程交付团队的知识沉淀实践.md  personal_knowledge_state_product_plan.md  pks_incremental_notes_architecture_and_tooling.md  吹了几年的 AI 个人知识库，为什么还是那么难用？Karpathy 的 Wiki 并不是解决方案…【技术文章】.md  职业 AI 的认识论困境与架构演进.md  职业agent研究报告.md  职业agent讨论.md
docs/implementation/: p0-kernel-calibration.md  p3-completion.md
docs/plans/: 2026-05-08-pks-p0-implementation-plan.md  2026-05-09-pks-p1-claim-review-plan.md  2026-05-11-pks-p2-maintenance-webui-plan.md  2026-05-11-pks-p3-agent-collaboration-plan.md  2026-05-14-pks-p3.2-integrity-cascade-plan.md  2026-06-22-pks-p4-market-domain-plan.md
docs/skill/: pks-agent-skill.md
skills/pks-agent/: SKILL.md  SKILL_CN.md
skills/pks-agent/agents/: openai.yaml
src/pks/: __init__.py  __main__.py  cli.py  context.py  models.py  paths.py  storage.py
src/pks/kernel/: __init__.py  facade.py  health.py
src/pks/kernel/audit/: __init__.py  factory.py  log.py
src/pks/kernel/candidate/: __init__.py  queue.py  store.py
src/pks/kernel/capsule/: __init__.py  id_generator.py  layout.py  policy.py  projection_specs.py  seeder.py  (+2 more)
src/pks/mcp/: __init__.py  auth.py  config.py  server.py
src/pks/web/: __init__.py  app.py
tests/: test_cli.py  test_context.py  test_kernel.py  test_mcp.py  test_models.py  test_projection_engine.py  test_storage.py  test_web.py
(+50 files in other folders)
