[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-knowledge-state"
version = "0.1.0"
description = "Local-first personal knowledge state control plane."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
pks = "pks.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
